--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,11 @@
             </exclusions>
         </dependency>
 
-        <!--Localdate support for jackson-->
+        <!-- Localdate support for jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
-
 
         <!-- Mockito (for mocking in unit tests) -->
         <dependency>
@@ -90,6 +89,27 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <!-- JaCoCo Maven Plugin -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version> <!-- Use the latest version -->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal> <!-- Prepares the agent for coverage data -->
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id> <!-- Generate the coverage report after tests run -->
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
